--- a/package.json
+++ b/package.json
@@ -9,23 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.2.1",
+    "eslint": "8.29.0",
+    "eslint-config-next": "13.0.6",
+    "jwt-decode": "^3.1.2",
     "next": "12.3.1",
     "next-connect": "^1.0.0-next.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-query": "^3.39.2",
     "styled-components": "^5.3.6",
-    "axios": "^1.2.1",
-    "eslint": "8.29.0",
-    "eslint-config-next": "13.0.6",
-    "jwt-decode": "^3.1.2",
     "typescript": "4.9.3"
   },
   "devDependencies": {
+    "@iconify/react": "^4.0.1",
     "@types/axios": "^0.14.0",
-    "@types/styled-components": "^5.1.26",
     "@types/node": "18.11.10",
     "@types/react": "18.0.26",
-    "@types/react-dom": "18.0.9"
+    "@types/react-dom": "18.0.9",
+    "@types/styled-components": "^5.1.26"
   }
 }
