--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-query": "^3.39.2",
+    "react-toastify": "^9.1.1",
     "styled-components": "^5.3.6",
+    "sweetalert2": "^11.6.15",
     "typescript": "4.9.3"
   },
   "devDependencies": {
